@@ -38,7 +38,6 @@ import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
 import org.preesm.model.pisdf.CHeaderRefinement;
@@ -71,6 +70,6 @@ public class CHeaderUsedLocator {
   }
 
   public static final List<String> findAllCHeaderFileNamesUsed(final PiGraph graph) {
-    return findAllCHeadersUsed(graph).stream().map(IPath::toFile).map(File::getName).collect(Collectors.toList());
+    return findAllCHeadersUsed(graph).stream().map(IPath::toFile).map(File::getName).toList();
   }
 }
